--- a/src/views/page/ProfilePage.html
+++ b/src/views/page/ProfilePage.html
@@ -410,7 +410,7 @@
                                     <div class="col-lg-2 ">
                                       <img src="img/pips_logo.jpg " class="img-thumbnail img-responsive " alt="placeholder" width="100 " height="100 ">
                                     </div>
-                                    <h1><%= projects[(projects.length-i-1)].projects_name %></h1>
+                                    <h1>PIPS Project</h1>
                                   </div>
                                   <% } %>
                               </form>
@@ -430,7 +430,7 @@
                                       <img src="img/pips_logo.jpg " class="img-circle img-responsive " alt="placeholder " width="50" height="50 ">
                                     </div>
                                     <div class="col-lg-2 ">
-                                      <h1><%= followers[i].followers_id %></h1> 
+                                      <h1>Sebastian Vissepo</h1> 
                                     </div>
                                     <div class="col-lg-7 ">
                                       <button type="submit " class="btn btn-danger btn pull-right ">Unfollow</button>
