--- a/src/views/page/ProfilePage.html
+++ b/src/views/page/ProfilePage.html
@@ -479,8 +479,8 @@
                                   </div>
                                 </div>
                               </form>
-                              <form method="POST " action="/profile/deleteaccount ">
-                                <button type="submit " name="deleteaccount " class="btn btn-danger pull-right">Delete Account</button>
+                              <form method="POST" action="/profile/deleteaccount">
+                                <button type="submit " name="deleteaccount " class="btn btn-danger">Delete Account</button>
                               </form>
                             </div>
                           </section>
