--- a/src/views/page/ProfilePage.html
+++ b/src/views/page/ProfilePage.html
@@ -480,7 +480,7 @@
                                 </div>
                               </form>
                               <form method="POST" action="/profile/deleteaccount">
-                                <button type="submit " name="deleteaccount " class="btn btn-danger">Delete Account</button>
+                                <button type="submit " name="deleteaccount " class="btn btn-danger pull-right">Delete Account</button>
                               </form>
                             </div>
                           </section>
