--- a/src/views/catalogue/CatalogueEvents.html
+++ b/src/views/catalogue/CatalogueEvents.html
@@ -181,10 +181,9 @@
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-calendar"></i> Event Catalogue</h3>
-                  <ol class="breadcrumb">
-                    <li><i class="fa fa-calendar"></i>Event Catalogue</li>
-                  </ol>
+                  <section class="panel">
+                    <h3 class="page-header"><i class="fa fa-calendar"></i> Event Catalogue<a href="/createevent" class="btn btn-primary btn pull-right">Create Event</a></h3>
+                  </section>
                 </div>
               </div>
               <div class="row">
