--- a/src/views/catalogue/CatalogueGroups.html
+++ b/src/views/catalogue/CatalogueGroups.html
@@ -180,7 +180,7 @@
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-beer"></i> Group Catalogue</h3>
+                  <h3 class="page-header"><i class="fa fa-beer"></i> Group Catalogue<a href="/creategroup" class="btn btn-primary btn pull-right">Create Group</a></h3>
                   <ol class="breadcrumb">
                     <li><i class="fa fa-beer"></i>Group Catalogue</li>
                   </ol>
